# notification-ui

./: .gitignore  CMakeLists.txt  Info.plist  JWebSocket.java  README.org  bridge.cpp  bridge.h  default.css  default.js  default.nix  index.html  main.cpp  mainwindow.cpp  mainwindow.h  notification-ui.pro  notification-ui.sh  notification_ui.scala  pkg.nix  server.js  shell.nix  test.js  theme.css
emacs/: notification-manager.el
html/: default.css  default.js  index.html  test.js  utils.js
